--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,13 @@
   "builds": [
     {
       "src": "index.js",
-      "use": "@now/node-server"
+      "use": "@now/node"
     }
   ],
   "routes": [
     {
-      "src": "./(.*)",
-      "dest": "/"
+      "src": "/(.*)",
+      "dest": "index.js"
     }
   ]
 }
